 * Removed deprecated FieldFunction,FieldToPointFunction::getSpatialDimension
 * Removed deprecated LinearModelRSquared, LinearModelAdjustedRSquared
 * Deprecated LinearModel, LinearModelFactory

=== Python module ===

=== Miscellaneous ===
 * Changed bugtracker to GitHub issues (https://github.com/openturns/openturns/issues)
 * Dropped rot dependency

=== Bug fixes ===
 * #579 (There is no example of a typical "Central Tendency" study)
 * #839 (more optim solvers details)
 * #931 (The PostAnalyticalImportanceSampling and PostAnalyticalControlledImportanceSampling are too briefly documented)
 * #979 (Viewer does not handle BarPlot's fillStyle)
 * #977 (HypothesisTest::ChiSquared is bogus)
 * #980 (CorrelationAnalysis_SRC scales the coefficients so that they sum to 1)
 * #982 (LinearModelTest::LinearModelDurbinWatson with several factors)
 * #983 (Bogus Normal parameter distribution)
 * #995 (Pip does not recognize conda install of openturns)
 * #1000 (SaltelliSensitivityAlgorithm with LowDiscrepancyExperiment produces wrong results)

== 1.12 release (2018-11-08) == #release-1.12

=== Library ===

==== Major changes ====
 * FieldFunction and co knows its input/output meshes before evaluation
 * SobolSequence has been extended from maximum dimension 40 to 1111
 * Parametrized statistical tests by first kind risk instead of 1-risk
 * FittingTest now compute a correct p-value in Kolmogorov tests even if the parameters are estimated from the tested sample
 * Completed documentation migration with process content

==== New classes ====
 * ProbabilitySimulationResult
 * ExpectationSimulationAlgorithm, ExpectationSimulationResult
 * ExtremeValueCopula
 * ChaospyDistribution
 * SobolSimulationAlgorithm, SobolSimulationResult
 * FractionalBrownianMotionModel

==== API changes ====
 * Removed deprecated MonteCarlo, ImportanceSampling, QuasiMonteCarlo, RandomizedQuasiMonteCarlo, RandomizedLHS classes