@@ -17,8 +17,6 @@ ot_add_source_file (HMatrixFactory.cxx)
 ot_add_source_file (HMatrix.cxx)
 ot_add_source_file (HMatrixImplementation.cxx)
 ot_add_source_file (Last.cxx)
-ot_add_source_file (LinearModel.cxx)
-ot_add_source_file (LinearModelFactory.cxx)
 ot_add_source_file (LowDiscrepancySequence.cxx)
 ot_add_source_file (LowDiscrepancySequenceImplementation.cxx)
 ot_add_source_file (Null.cxx)
@@ -73,7 +71,6 @@ ot_add_source_file (kendall.c)
 ot_install_header_file (HistoryStrategyImplementation.hxx)
 ot_install_header_file (SobolSequence.hxx)
 ot_install_header_file (CovarianceMatrix.hxx)
-ot_install_header_file (LinearModelFactory.hxx)
 ot_install_header_file (TestResult.hxx)
 ot_install_header_file (FaureSequence.hxx)
 ot_install_header_file (HaltonSequence.hxx)
@@ -87,7 +84,6 @@ ot_install_header_file (Last.hxx)
 ot_install_header_file (RandomGenerator.hxx)
 ot_install_header_file (RandomGeneratorState.hxx)
 ot_install_header_file (csv_parser_state.hxx)
-ot_install_header_file (LinearModel.hxx)
 ot_install_header_file (HistoryStrategy.hxx)
 ot_install_header_file (CorrelationAnalysis.hxx)
 ot_install_header_file (LowDiscrepancySequence.hxx)
